# rolebrew_tfg

./: LICENSE  README.md  docker-compose.yaml  docker-compose.yml
backend/: .env  .gitignore  Cargo.toml  Dockerfile  out.txt
backend/data-transformer/: README.md  bun.lockb  index.ts  out.html  package.json
backend/data-transformer/src/fvtt/: ancestry.ts  fvtt.ts  heritage.ts
backend/data-transformer/src/models/: action.ts  ancestry.ts  heritage.ts  index.ts
backend/data-transformer/src/models/helpers/: html.ts
backend/data-transformer/src/models/primary/: ancestry.ts  (+2 more)
backend/data-transformer/src/pf2e/: ancestry.ts  pf2etools.ts
backend/data-transformer/src/utils/: testTransform.ts
backend/src/: auth.rs  character.rs  character_creator.rs  hash.rs  helpers.rs  main.rs  user.rs
backend/src/api/: action_api.rs  ancestry_api.rs  auth.rs  background_api.rs  characters_api.rs  class_api.rs  condition_api.rs  equipment_api.rs  feat_api.rs  heritage_api.rs  journal_api.rs  mod.rs  spell_api.rs  user.rs
backend/src/db/: characters_db_impl.rs  dbref.rs  mod.rs  storeable.rs  users_db_impl.rs
backend/src/models/: attribute.rs  boost_flaw.rs  damage.rs  entry_data.rs  item.rs  languages.rs  link_preview.rs  meta.rs  mod.rs  proficiency.rs  publication.rs  rule.rs  saving_throw.rs  size.rs  skill.rs  speed.rs  summary.rs  vision.rs
backend/src/models/primary/: action.rs  ancestry.rs  background.rs  class.rs  condition.rs  equipment.rs  feat.rs  heritage.rs  journal.rs  mod.rs  spell.rs
backend/src/models/rule/: choice_set.rs  grant_item.rs  mod.rs
(+328 files in other folders)
