[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
# Serialization / Deserialization
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.130"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"

# Typescript Types
specta = { version = "=2.0.0-rc.20", features = [
    "derive",
    "serde_json",
    "bson",
    "uuid",
] }
specta-util = "0.0.7"
specta-typescript = "0.0.7"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"

# Database
mongodb = "3.1.0"
bson = { version = "2.13.0", features = ["serde_path_to_error"] }

# Web API
actix-web = "4"
actix-cors = "0.7.0"
dotenv = "0.15.0"
env_logger = "0.11.6"
argon2 = "0.5.3"
base64 = "0.22.1"
rand = "0.9.0"
jsonwebtoken = "9.3.1"
chrono = "0.4.40"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
